Fixes Issue #56 : Inconsistency with time stamp alignments.
Changed margin values for .chat .chat-history .message-data

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@
   height: 20rem;
 }
 .chat .chat-history .message-data {
-  margin-bottom: 15px;
+  margin-top: 1.5rem;
+  margin-bottom: -0.5rem;
 }
 .chat .chat-history .message-data-time {
   color: #a8aab1;
